<resources>
    <string name="app_name">Food Delivery</string>
    <string name="facebook_app_id">623079604838078</string>
    <string name="fb_login_protocol_scheme">fb623079604838078</string>
    <string name="server_client_id">798551828496-90889r35f20e6puj5ks3vul8labunb3h.apps.googleusercontent.com</string>
    <string name="google_maps_api_key">
       AIzaSyBuv21TYl3GzsoFb2lmhsM_Dn4cD36t8OI
    </string>
    <string name="loginpagemessage">Please login or Register to Continue With your Order</string>
    <string name="terms_and_condition">Yes,I have read and accept Terms and Condition</string>
    <string name="appartment_unit">Appartment/Unit</string>
    <string name="street_name">Street Name</string>
    <string name="block_no">Block No</string>
    <string name="enter_cell_number">Enter Cell Number</string>
    <string name="area_code">Area Code</string>
    <string name="email_name">Email Name</string>
    <string name="txt_item_name">Veg.Rava Masaladosa,dahi idli</string>
    <string name="itrm_price">$25.00</string>
    <string name="txt_item_distance">1 mile away</string>
    <string name="txt_chef_name">Chef Dazzy Peter</string>
    <string name="item_count">3</string>
    <string name="msg_please_wait">Please wait...</string>
    <string name="dummy_more_details">a yes/no button panel,or custom progress bar with description text. It also means
        that any elements of your application that are common across multiple layouts can be extracted, managed
        separately, then included in each layout. So while you can create individual UI components by writing a custom
        View, you can do it even more easily by re-using a layout file.
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Please login or Register to Continue With your Order</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="connect_using">CONNECT USING</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="review_order">Review Order</string>
    <string name="delivery_time_9_30_10_30pm">Delivery Time (9:30-10:30PM)</string>
    <string name="payment_method">Payment Method</string>
    <string name="_1234">**** **** **** 1234</string>
    <string name="change">change</string>
    <string name="_3">3</string>
    <string name="green_capsicum_pepped_up_with_cheese_and_spices">Green Capsicum pepped up with Cheese and Spices
    </string>
    <string name="_75">$75</string>
    <string name="_25">$25</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="language_s_spoken">Language(s) Spoken</string>
    <string name="english_chinease_tamil">English,Chinease,Tamil</string>
    <string name="cuisines">Cuisines</string>
    <string name="marathi">Marathi</string>
    <string name="mode">Mode</string>
    <string name="dine_in_home_delivery">Dine In,Home Delivery</string>
    <string name="food_type">Food Type</string>
    <string name="chinease_punjabi">Chinease,Punjabi</string>
    <string name="basket">Basket</string>
    <string name="_450">$450 </string>
    <string name="_2_meals">(2 Meals)</string>
    <string name="total_amount">Total Amount</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="mobile">Mobile</string>
    <string name="_91">+91</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="home_address">Home Address</string>
    <string name="enter_home_address">Enter Home Address</string>
    <string name="address_line1">Address</string>
    <string name="enter_address_line1">Enter Address</string>
    <string name="address_line2">Address Line2</string>
    <string name="enter_address_line2">Enter Address Line2</string>
    <string name="country">Country</string>
    <string name="enter_country">Enter Country</string>
    <string name="city">City</string>
    <string name="enter_city">Enter City</string>
    <string name="zip_code">Zip Code</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="_2039">**** **** **** 2039</string>
    <string name="paytm_wallet">Paytm Wallet</string>
    <string name="cash">Cash</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="google_wallet">Google Wallet</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="breakfast">BreakFast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="your_current_location">Your Current Location</string>
    <string name="do_want_to_change_your_location">Do Want to Change your Location?</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="get_started">Get Started</string>
    <string name="favorites">Favorites</string>
    <string name="select_time">Select Time</string>
    <string name="delivery_9_30_10_30pm">Delivery(9:30- 10:30PM)</string>
    <string name="on_demand">On Demand</string>
    <string name="view_cart">View Cart</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="dine_in">Dine In</string>
    <string name="take_out">Take Out</string>
    <string name="delivery">Delivery</string>
    <string name="choose_time">Choose Time</string>
    <string name="as_soon_as_possible_asap_us_200_extra">As Soon As Possible(ASAP)(Us$ 200 Extra)</string>
    <string name="_30_mins_us_150_extra">30 mins(US$ 150 Extra)</string>
    <string name="_1_hr_by_5_pm_us_100_extra">1 hr by 5 PM(US$ 100 Extra)</string>
    <string name="_1_30_hr">1:30 hr</string>
    <string name="select_order_pick_up_location">Select Order Pick-up Location</string>
    <string name="_350_fift_avanue_34th_floor">350 Fift Avanue,34th Floor</string>
    <string name="new_york_ny_10118_3299_usa">New York,Ny 10118-3299 USA</string>
    <string name="type_comment_here">Type Comments Here</string>
    <string name="proceed">Proceed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="x_cancel">X Cancel</string>
    <string name="name">Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="state">State</string>
    <string name="enter_state">Enter State</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="topic">Topic</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="faq">FAQ</string>
    <string name="loren_ispat_simple_a_dummy_text">Loren Ispat Simple a Dummy Text</string>
    <string name="loren_ispat_simple_a_dummy_text_loren_ispat_simple_a_dummy_text_loren_ispat_simple_a_dummy_text">Loren
        Ispat Simple a Dummy Text Loren Ispat Simple a Dummy Text Loren Ispat Simple a Dummy Text
    </string>
    <string name="ahmedabad">Ahmedabad</string>
    <string name="reviews">Reviews</string>
    <string name="details">Details</string>
    <string name="qty">Qty</string>
    <string name="south_indian">South Indian</string>
    <string name="cuisine">Cuisine :</string>
    <string name="cheff_dazzy">Cheff Dazzy</string>
    <string name="enter_zip_code_or_address">Enter Zip Code Or Address</string>
    <string name="select_home_address">Select Home Address</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="address_3">Address 3</string>
    <string name="address_4">Address 4</string>
    <string name="my_order">My Order</string>
    <string name="my_profile">My Profile</string>
    <string name="larun_taylor">Larun Taylor</string>
    <string name="navrangpura">Navrangpura,</string>
    <string name="_22">22</string>
    <string name="my_address">My Address</string>
    <string name="notifactions">Notifactions</string>
    <string name="_23_feb_2019">23 Feb 2019</string>
    <string name="review">Reviews</string>
    <string name="chef_dazzy_petet">Chef Dazzy Peter</string>
    <string name="subtotal">Subtotal</string>
    <string name="_70">$70</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="_5">$5</string>
    <string name="tax">Tax</string>
    <string name="_00_00">$00.00</string>
    <string name="total">Total</string>
    <string name="_75_25">$75.25</string>
    <string name="coupan_code">Coupan Code</string>
    <string name="apply">Apply</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="continue_browsing">Continue Browsing</string>
    <string name="i_would_like_to_save_my_details_for_next_purchase">I would like to save my details for next
        purchase.
    </string>
    <string name="enter_billing_zip_code">Enter Billing Zip Code</string>
    <string name="billing_zip_code">Billing Zip Code</string>
    <string name="enter_security_code">Enter Security Code</string>
    <string name="cvv">CVV</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="enter_card_no">Enter Card No</string>
    <string name="card_no">Card No</string>
    <string name="enter_name_on_card">Enter Name On Card</string>
    <string name="name_on_card">Name On Card</string>
    <string name="card_type">Card Type</string>
    <string name="enter_your_credit_card_details">Enter Your Credit Card Details</string>
    <string name="scan_your_card">Scan Your Card</string>
    <string name="offers_promotions_alert">Offers/Promotions Alert</string>
    <string name="order_procees_alerts">Order Procees Alerts</string>
    <string name="opt_for_our_push_notifations_to_stay_tuned">Opt For our Push notifations to Stay Tuned</string>
    <string name="notifation">Notifation</string>
    <string name="menu">Menu</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="modak_money">Modak Money</string>
    <string name="lauren_taylor">Lauren Taylor</string>
    <string name="notifications">Notifications</string>
    <string name="payment_info">Payment Info</string>
    <string name="free_meals">Free Meals</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="current_order">Current Order</string>
    <string name="past_order">Past Order</string>
    <string name="internet_connection">Please Check Internet Connection</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="please_accpet_terms_and_condition">Please Accept Terms and Condition</string>
    <string name="please_enter_registred_email">Please Enter Registered Email</string>
    <string name="please_enter_password">Please Enter Password</string>
</resources>